# llell

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  vcpkg-x64-linux.txt  vcpkg-x64-osx.txt  vcpkg-x64-windows-static.txt  vcpkg.json
.github/workflows/: linux.yml  macos.yml  vcpkg.yml  windows.yml
cmake/: get_ccache.cmake  get_cpm.cmake  get_vcpkg.cmake
src/: CMakeLists.txt  co.h  convert.h  filedialog.h  glfw.h  http.h  image.h  imgui_.h  imgui_widgets.h  main.cpp  opengl.h  timeout.h  uri.h  uri_x3.h
test/: CMakeLists.txt  main.cpp
vcpkg_manifest/: vcpkg.json
