cmake_minimum_required (VERSION 3.14)
if (WIN32)
    set(VCPKG_TARGET_TRIPLET "x64-windows-static-md" CACHE STRING "")
endif ()
if (UNIX AND NOT APPLE)
    set(VCPKG_TARGET_TRIPLET "x64-linux" CACHE STRING "")
endif ()
if (APPLE)
    set(VCPKG_TARGET_TRIPLET "x64-osx" CACHE STRING "")
endif ()
set(CMAKE_TOOLCHAIN_FILE
  ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake
  CACHE STRING "Vcpkg toolchain file")

project(llell VERSION 1.0 LANGUAGES CXX)
cmake_policy(SET CMP0074 NEW)
find_package(Boost REQUIRED)
find_package(doctest REQUIRED)
find_package(fmt REQUIRED)
find_package(imgui REQUIRED)
find_package(implot REQUIRED)
find_package(unofficial-nativefiledialog REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(tl-expected)
add_subdirectory(src)
enable_testing()
add_subdirectory(test)
