cmake_minimum_required(VERSION 3.23)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(get_ccache)
include(get_vcpkg)
project(llell)

cmake_policy(SET CMP0074 NEW)
find_package(Boost REQUIRED)
find_package(doctest REQUIRED)
find_package(fmt REQUIRED)
find_package(imgui REQUIRED)
find_package(implot REQUIRED)
find_package(JPEG REQUIRED)
find_package(unofficial-nativefiledialog REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(libpng REQUIRED)
find_package(tl-expected REQUIRED)
find_package(glbinding REQUIRED)

add_subdirectory(src)
enable_testing()
add_subdirectory(test)
